--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "typescript": "~5.9.3",
     "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "axios": "^1.13.5",
+    "modern-normalize": "^3.0.1",
+    "react-hot-toast": "^2.6.0"
   }
 }
